# C-Utils

./: CMakeLists.txt  README.md  cutils.h
cmake/: C-UtilsConfig.cmake
include/C-Utils/: big-data.c  big-data.h  big-o-utils.c  big-o-utils.h  c-utils.c  c-utils.h  constants.c  consts.c  cutils.c  cutils.h  definitions.h  defs.h  image-utils.c  image-utils.h  img-utls.c  img-utls.h  math-utils.c  math-utils.h  mth-utls.c  mth-utls.h  mutils.c  mutils.h  tcutils.c  tcutils.h  temperature-utils.c  temperature-utils.h  thread-utils.c  thread-utils.h  tmp-utls.c  tmp-utls.h  trd-utls.c  trd-utls.h
