cmake_minimum_required(VERSION 4.2.1)
project(C-Utils VERSION 1.7.0)
add_library(C-Utils INTERFACE)
target_include_directories(C-Utils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/C-Utils $<INSTALL_INTERFACE:include/C-Utils>)
include(CMakePackageConfigHelpers)
export(PACKAGE C-Utils)
install(TARGETS cutils EXPORT C-UtilsTargets ARCHIVE DESTINATION lib LIBRARY DESTINATION lib RUNTIME DESTINATION bin)
install(EXPORT C-UtilsTargets FILE C-UtilsTargets.cmake NAMESPACE C-Utils:: DESTINATION lib/cmake/C-Utils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/C-UtilsConfig.cmake DESTINATION lib/cmake/C-Utils)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include)
